Select overflow fix

--- a/scss/pavilion-parts/_forms.scss
+++ b/scss/pavilion-parts/_forms.scss
@@ -213,7 +213,6 @@ select {
         background-repeat: no-repeat;
         background-position: right center;
         background-origin: content-box;
-        overflow-x: visible;
         height: 3.5rem;
         @media (min-width: $size-switch) {
             height: 2.87rem;
